# misinformation-defence-platform

./: 0-AI-MANIFEST.a2ml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  META.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  URGENT-RESCRIPT-MIGRATION.md  codemeta.json  deny.toml  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.github/workflows/: codeql.yml  hypatia-scan.yml  jekyll-gh-pages.yml  scorecard-enforcer.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/svc/: README.adoc
.well-known/: dc.xml  security.txt
algorithm-shield/: .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md  deno.json  manifest.json  package.json  rescript.json
algorithm-shield/.machine_readable/: session-accomplishments.a2ml  session-blockers.scm  session-files.a2ml  session-metrics.scm  session-next.scm  session-state.scm
algorithm-shield/docs/: CITATIONS.adoc  COMPETITIVE-LANDSCAPE.adoc  CONTAINERIZATION-ANALYSIS.adoc  CRYPTOGRAPHIC-SUITE.adoc  DEFENSE-LAYERS.adoc  EPHAPAX-MIGRATION-STRATEGY.adoc  EPHAPAX-PERFORMANCE.adoc  NETWORK-PROTOCOL-INTEGRATION.adoc  NETWORK-PROTOCOLS.adoc  PERSPECTIVE-SHARING-SYSTEM.adoc  POLYMORPHIC-METAMORPHIC-ANALYSIS.adoc  PROVEN-EPHAPAX-INTEGRATION.adoc  REVERSIBLE-STORAGE-INTEGRATION.adoc  ROADMAP.adoc  SEAM-ANALYSIS.adoc  SEAM-SUMMARY.md  SECURITY-ACCESSIBILITY-CHECKLIST.adoc  SECURITY-HEADERS-INTEGRATION.adoc  SESSION-SUMMARY-20260124-SECURITY-ACCESSIBILITY.md  (+4 more)
algorithm-shield/src/rust/: Cargo.toml
algorithm-shield/src/rust/src/: lib.rs
algorithm-shield/src/rust/src/minikaren/: actions.rs  context.rs  mod.rs  rules.rs
defensive-multiplicity/: ETHICS_CHARTER.md  README.adoc  README.md  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md
disinfo-nesy-detector/: .editorconfig  .gitignore  .tool-versions  Cargo.toml  Containerfile  Justfile  README.adoc  ROADMAP.adoc  RUST_CONVERSION_NEEDED.md  aspects.ncl  eclexiaiser.toml  podman-compose.yaml
disinfo-nesy-detector/.claude/: CLAUDE.md
disinfo-nesy-detector/.clusterfuzzlite/: Containerfile  build.sh
disinfo-nesy-detector/.github/workflows/: cflite_batch.yml  cflite_pr.yml  ghcr-publish.yml  rust.yml
disinfo-nesy-detector/.machine_readable/: ECOSYSTEM.scm  META.scm  STATE.scm
disinfo-nesy-detector/.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
disinfo-nesy-detector/benches/: disinfo_nesy_detector_bench.rs
disinfo-nesy-detector/ci/helm/detector/: values.yaml
disinfo-nesy-detector/ci/salt/: detector.sls
disinfo-nesy-detector/docs/: CITATIONS.adoc
disinfo-nesy-detector/docs/architecture/: README.md
disinfo-nesy-detector/eval/: Cargo.toml  README.adoc
disinfo-nesy-detector/eval/benches/: detection_bench.rs
disinfo-nesy-detector/eval/datasets/: datasets.json
disinfo-nesy-detector/eval/scripts/: run-eval.sh
disinfo-nesy-detector/eval/src/: baseline.rs  baselines.rs  datasets.rs  download.rs  explainability.rs  lib.rs  main.rs  metrics.rs  model_card.rs  pipeline.rs
disinfo-nesy-detector/eval/tests/: aspect_tests.rs  e2e_tests.rs  property_tests.rs
disinfo-nesy-detector/fuzz/: Cargo.toml
disinfo-nesy-detector/fuzz/fuzz_targets/: fuzz_input.rs
disinfo-nesy-detector/proto/: analysis.proto
disinfo-nesy-detector/scripts/: rollback.sh
disinfo-nesy-detector/src/: main.rs  model_pb.rs  onnx_wrapper.rs  souffle_wrapper.rs
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
(+41 files in other folders)
