# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2024 Hyperpolymath

[package]
name = "disinfo-eval"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Evaluation pipeline for Neuro-Symbolic Disinformation Detector"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client for dataset downloads
reqwest = { version = "0.12", features = ["blocking", "json"] }

# CSV parsing
csv = "1.3"

# Progress bars
indicatif = "0.17"

# Hashing for reproducibility
sha2 = "0.10"
hex = "0.4"

# Random for baselines
rand = "0.8"
rand_chacha = "0.3"

# Statistics
statrs = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime (for downloads)
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

# Date/time for results
chrono = { version = "0.4", features = ["serde"] }

# File compression (for dataset archives)
flate2 = "1.0"
tar = "0.4"
zip = "2.2"

[[bin]]
name = "eval-pipeline"
path = "src/main.rs"

[[bin]]
name = "download-datasets"
path = "src/download.rs"

[[bin]]
name = "run-baseline"
path = "src/baseline.rs"
