[package]
name = "algorithm-shield-engine"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
license = "PMPL-1.0-or-later"
description = "Rule engine and logic programming core for Algorithm Shield"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
# v2.0: Will integrate proven via Ephapax hot paths (Ephapax→WASM + proven via Zig FFI)
# Ephapax bindings ready at: /var/mnt/eclipse/repos/proven/bindings/ephapax

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
